[package]
name = "wave"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wave"
crate-type = ["dylib", "rlib"]

[dependencies]
system-call = { git = "https://github.com/emlaufer/system-call.rs.git", branch = "master" }
libc = "0.2"
trace = "0.1.7"
#extra_args = "=0.1.69"
wave-macros = { path = "wave-macros"}
owned-components = { path = "owned-components"}
paste = "1.0" # used in syscall function generation
flux-rs = { git = "https://github.com/flux-rs/flux.git", rev = "3e7f804ae60f28913726ea9dbf9e54b61387e62f"}

# Used for debugging
log = "0.4.14"
env_logger = "0.8.0"

quickcheck="1.0.3"
quickcheck_macros = "1.0.0"
# Used for computing stats on benchmarks
statistical = "1.0.0"

#[dev-dependencies]
regex = "1"


[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4.0"
security-framework-sys = "2.4.2"

[features]
verify = ["wave-macros/enable"] # feature for when we're verifying
time_syscalls = []
time_hostcalls = []

[package.metadata.flux]
enabled = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(flux)'] }
